修改demo名称，调整readme

--- a/settings.gradle
+++ b/settings.gradle
@@ -7,5 +7,5 @@ dependencyResolutionManagement {
     }
 }
 rootProject.name = "BluetoothDemo"
-include ':app'
+include ':demo'
 include ':BluetoothLib'
