--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -35,5 +35,5 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation project(path: ':BluetoothLib')
+    implementation 'com.github.caixingcun:BluetoothLib:1.0'
 }
