--- a/BluetoothLib/build.gradle
+++ b/BluetoothLib/build.gradle
@@ -30,11 +30,37 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    afterEvaluate {
+        publishing {
+            def versionName = "1.2"
+            publications {
+                // Creates a Maven publication called "release".
+                release(MavenPublication) {
+                    // Applies the component for the release build variant.
+                    from components.release
+
+                    // You can then customize attributes of the publication as shown below.
+                    groupId = 'com.cxc.bluetoothlib'
+                    artifactId = 'bluetoothlib'
+                    version = versionName
+                }
+            }
+            repositories {
+                maven {
+                    // change URLs to point to your repos, e.g. http://my.org/repo
+                    def baseUrl = buildDir.getParent()
+                    def releasesRepoUrl = "$baseUrl/repos/releases"
+                    def snapshotsRepoUrl = "$baseUrl/repos/snapshots"
+                    url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
+                }
+            }
+        }
+    }
 }
 
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
-
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
